[gd_scene load_steps=4 format=3 uid="uid://dmels38uaswnh"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_fh5oe"]
[ext_resource type="PackedScene" uid="uid://bx1l5xk0iq241" path="res://scenes/parallax_background.tscn" id="2_r0n53"]
[ext_resource type="PackedScene" uid="uid://c4m88fb3po40n" path="res://scenes/player.tscn" id="3_8sbe6"]

[node name="Main" type="Node"]
script = ExtResource("1_fh5oe")

[node name="Environment" type="Node2D" parent="."]
position = Vector2(0, 2)

[node name="ParallaxBackground" parent="Environment" instance=ExtResource("2_r0n53")]

[node name="PlayerSpawn" type="Marker2D" parent="Environment"]
position = Vector2(40, 758)

[node name="Player" parent="." instance=ExtResource("3_8sbe6")]
z_index = 1
position = Vector2(56, 240)
disable_mode = 1

[connection signal="ready" from="Player" to="." method="_on_player_ready"]
